--- a/src/templates/meme.html
+++ b/src/templates/meme.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Meme Generator{% endblock %}
 {% block body %}
+<span>{{ error_msg }}</span>
+{% if path != "" %}
 <img src="{{ path }}" />
+{% endif %}
 {% endblock %}
